説明文を変更

--- a/index.html
+++ b/index.html
@@ -34,12 +34,7 @@
 
 <div class="row col tac">
 <h1>Pokemon555</h1>
-</div>
-
-<div class="row col">
-<h2>As Simple As Responsive Grids Get</h2>
-<p class="desc">A demo of </p>
-<p class="intro">Dead Simple Grid is a responsive </p>
+<p>Pokemon Go!の情報をまとめるためのサイト</p>
 </div>
 
 <div class="row col">
