--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Pokemon555 -Pokemon Go!の情報をまとめるためのサイト- {block:PostSummary} &mdash; {PostSummary}{/block:PostSummary}</title>
 {block:Description}<meta name="description" content="{MetaDescription}">{/block:Description}
-<link rel="stylesheet" href="https://cdn.rawgit.com/deroter/Pokemon-555/master/css/grid.css">
+<link rel="stylesheet" href="https://rawgit.com/deroter/Pokemon-555/master/css/grid.css">
 <link rel="shortcut icon" href="{Favicon}">
 <link rel="apple-touch-icon" href="{PortraitURL-128}">
 <link rel="alternate" type="application/rss+xml" href="{RSS}">
