--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<script type="text/javascript" src="//webfont.fontplus.jp/accessor/script/fontplus.js?LjYM3pgbI9A%3D&box=vA6OKP7929E%3D&aa=1" charset="utf-8"></script>
+<link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-80637016-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 <header class="header">
@@ -196,4 +206,3 @@
 <small class="copy">copyright&copy; Pokemon555 All Rights Reserved.</small>
 </body>
 </html>
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
